--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,14 @@
 	<main>
 		<!-- location section -->
 		<section class="location">
-			<p class="location__text">
-				<i class="fas fa-map-marker-alt"></i>
-				Paris, Belleville
-			</p>
+			<div class="location__content">
+				<p class="location__text">
+					<i class="fas fa-map-marker-alt"></i>
+					Paris, Belleville
+				</p>
+			</div>
 		</section>
+
 		<!-- hero section -->
 		<section class="hero">
 			<h1 class="hero__title">Réservez le menu qui<br />vous convient</h1>
@@ -37,6 +40,31 @@
 				soins.
 			</p>
 			<a href="#" class="btn">Explorer nos restaurants</a>
+		</section>
+
+		<!-- usage section -->
+		<section class="usage">
+			<h2 class="usage__title">Fonctionnement</h2>
+
+			<div class="usage__cards">
+				<div class="usage__card">
+					<div class="usage__number">1</div>
+					<i class="fas fa-mobile-alt"></i>
+					<p class="usage__card-text">Choisissez un restaurant</p>
+				</div>
+
+				<div class="usage__card">
+					<div class="usage__number">2</div>
+					<i class="fas fa-list-ul"></i>
+					<p class="usage__card-text">Composez votre menu</p>
+				</div>
+
+				<div class="usage__card usage__card--highlight">
+					<div class="usage__number">3</div>
+					<i class="fas fa-store"></i>
+					<p class="usage__card-text">Dégustez au restaurant</p>
+				</div>
+			</div>
 		</section>
 	</main>
 </body>
