--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-	<title>ohmyfood | Réservez le menu qui vous convient</title>
+	<title>Ohmyfood!</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -39,7 +39,7 @@
 				Découvrez des restaurants d'exception,<br />sélectionnés par nos
 				soins.
 			</p>
-			<a href="#" class="btn">Explorer nos restaurants</a>
+			<a href="#restaurants" class="btn">Explorer nos restaurants</a>
 		</section>
 
 		<!-- usage section -->
@@ -64,6 +64,72 @@
 					<i class="fas fa-store"></i>
 					<p class="usage__card-text">Dégustez au restaurant</p>
 				</div>
+			</div>
+		</section>
+
+		<!-- restaurants section -->
+		<section class="restaurants" id="restaurants">
+			<h2 class="restaurants__title">Restaurants</h2>
+
+			<div class="restaurants__cards">
+				<a class="restaurants__card">
+					<div class="restaurants__card-img">
+						<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant thumbnail" />
+					</div>
+					<div class="restaurants__card-body">
+						<h3 class="restaurants__card-title">La palette du goût</h3>
+						<p class="restaurants__card-location">Ménilmontant</p>
+						<div class="restaurants__card-heart">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+					<div class="restaurants__card-label">Nouveau</div>
+				</a>
+
+				<a class="restaurants__card">
+					<div class="restaurants__card-img">
+						<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant thumbnail" />
+					</div>
+					<div class="restaurants__card-body">
+						<h3 class="restaurants__card-title">La note enchantée</h3>
+						<p class="restaurants__card-location">Charonne</p>
+						<div class="restaurants__card-heart">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+					<div class="restaurants__card-label">Nouveau</div>
+				</a>
+
+				<a class="restaurants__card">
+					<div class="restaurants__card-img">
+						<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant thumbnail" />
+					</div>
+					<div class="restaurants__card-body">
+						<h3 class="restaurants__card-title">A la Française</h3>
+						<p class="restaurants__card-location">Cité Rouge</p>
+						<div class="restaurants__card-heart">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</a>
+
+				<a class="restaurants__card">
+					<div class="restaurants__card-img">
+						<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+							alt="restaurant thumbnail" />
+					</div>
+					<div class="restaurants__card-body">
+						<h3 class="restaurants__card-title">Le délice des sens</h3>
+						<p class="restaurants__card-location">Folie-Méricourt</p>
+						<div class="restaurants__card-heart">
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
+						</div>
+					</div>
+				</a>
 			</div>
 		</section>
 	</main>
