--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,27 @@
 			</div>
 		</section>
 	</main>
+	<footer class="footer">
+		<div class="footer__content">
+			<a href="#" class="footer__logo">ohmyfood</a>
+			<ul>
+				<li>
+					<a href="#" class="footer__links footer__links--bold"><i class="fas fa-utensils"></i>Proposer un
+						restaurant</a>
+				</li>
+				<li>
+					<a href="#" class="footer__links footer__links--bold"><i class="fas fa-hands-helping"></i>Devenir
+						partenaire</a>
+				</li>
+				<li>
+					<a href="#" class="footer__links">Mentions légales</a>
+				</li>
+				<li>
+					<a href="#" class="footer__links">Contact</a>
+				</li>
+			</ul>
+		</div>
+	</footer>
 </body>
 
 </html>
