menu first page layout

--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,14 @@
 		</section>
 
 		<!-- restaurants section -->
-		<section class="restaurants" id="restaurants">
-			<h2 class="restaurants__title">Restaurants</h2>
+		<section class="restaurants">
+			<h2 class="restaurants__title">
+				<span class="restaurants__anchor" id="restaurants"></span>
+				Restaurants
+			</h2>
 
 			<div class="restaurants__cards">
-				<a class="restaurants__card">
+				<a class="restaurants__card" href="la-palette-du-gout.html">
 					<div class="restaurants__card-img">
 						<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant thumbnail" />
 					</div>
@@ -133,6 +136,7 @@
 			</div>
 		</section>
 	</main>
+
 	<footer class="footer">
 		<div class="footer__content">
 			<a href="#" class="footer__logo">ohmyfood</a>
