--- a/public/le-delice-des-sens.html
+++ b/public/le-delice-des-sens.html
@@ -30,7 +30,9 @@
 		<!-- menu section -->
 		<section class="menu">
 			<h1 class="menu__title">
-				La palette du goût
+				Le délice des sens
+
+				<!-- heart btn -->
 				<svg id="heart" height="0" width="0">
 					<defs>
 						<clipPath id="svgPath">
@@ -55,8 +57,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Fricassée d'escargot</h3>
-						<p class="menu__card-text">Au piment d'espelette</p>
+						<h3 class="menu__card-title">Tartare de thon</h3>
+						<p class="menu__card-text">Assaisonné au yuzu</p>
 					</div>
 					<div class="menu__card-price">25€</div>
 					<div class="menu__card-hidden-panel">
@@ -66,8 +68,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Foie gras de canard mi-cuit</h3>
-						<p class="menu__card-text">Et ses copeaux de truffe noir</p>
+						<h3 class="menu__card-title">Bouchée de homard croustillant</h3>
+						<p class="menu__card-text">Et sa farandole de petits légumes</p>
 					</div>
 					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
@@ -77,10 +79,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Oeuf au plat</h3>
-						<p class="menu__card-text">
-							Assaisonné à la truffe sur lit de caviar
-						</p>
+						<h3 class="menu__card-title">Velouté de cèpes</h3>
+						<p class="menu__card-text">Aux truffes</p>
 					</div>
 					<div class="menu__card-price">20€</div>
 					<div class="menu__card-hidden-panel">
@@ -95,10 +95,10 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Filet de boeuf aux herbes</h3>
-						<p class="menu__card-text">
-							Accompagné de sa ribambelle de légume
-						</p>
+						<h3 class="menu__card-title">
+							Poulet rôti aux herbes de Provence
+						</h3>
+						<p class="menu__card-text">Et sa crème de truffe</p>
 					</div>
 					<div class="menu__card-price">40€</div>
 					<div class="menu__card-hidden-panel">
@@ -108,10 +108,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Parmentier de queue de boeuf</h3>
-						<p class="menu__card-text">
-							À la truffe noire sur sa purée de panais
-						</p>
+						<h3 class="menu__card-title">Langouste rôtie</h3>
+						<p class="menu__card-text">Et ses légumes de saison</p>
 					</div>
 					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
@@ -121,8 +119,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Filet de turbot</h3>
-						<p class="menu__card-text">Aux agrumes</p>
+						<h3 class="menu__card-title">Côte de boeuf Angus</h3>
+						<p class="menu__card-text">Et sa purée de panais</p>
 					</div>
 					<div class="menu__card-price">44€</div>
 					<div class="menu__card-hidden-panel">
@@ -137,8 +135,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Paris-Brest</h3>
-						<p class="menu__card-text">Revisité</p>
+						<h3 class="menu__card-title">Farandole de desserts</h3>
+						<p class="menu__card-text">Du chef</p>
 					</div>
 					<div class="menu__card-price">18€</div>
 					<div class="menu__card-hidden-panel">
@@ -148,8 +146,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Macaron au chocolat d'exception</h3>
-						<p class="menu__card-text">Et glace à la vanille de Madagascar</p>
+						<h3 class="menu__card-title">Crème brulée</h3>
+						<p class="menu__card-text">Revisitée</p>
 					</div>
 					<div class="menu__card-price">22€</div>
 					<div class="menu__card-hidden-panel">
@@ -159,10 +157,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Mousse au chocolat</h3>
-						<p class="menu__card-text">
-							Au piment d'Espelette et à la truffe noir
-						</p>
+						<h3 class="menu__card-title">Tiramisu</h3>
+						<p class="menu__card-text">À la noisette</p>
 					</div>
 					<div class="menu__card-price">23€</div>
 					<div class="menu__card-hidden-panel">
