--- a/public/a-la-francaise.html
+++ b/public/a-la-francaise.html
@@ -24,13 +24,12 @@
 
 	<main>
 		<!-- image section -->
-		<img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-			alt="restaurant image preview" />
+		<img class="image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant image preview" />
 
 		<!-- menu section -->
 		<section class="menu">
 			<h1 class="menu__title">
-				La palette du goût
+				À la française
 				<svg id="heart" height="0" width="0">
 					<defs>
 						<clipPath id="svgPath">
@@ -55,8 +54,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Fricassée d'escargot</h3>
-						<p class="menu__card-text">Au piment d'espelette</p>
+						<h3 class="menu__card-title">Tartare de poulpe acidulé</h3>
+						<p class="menu__card-text">Aux zestes d'orange</p>
 					</div>
 					<div class="menu__card-price">25€</div>
 					<div class="menu__card-hidden-panel">
@@ -66,8 +65,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Foie gras de canard mi-cuit</h3>
-						<p class="menu__card-text">Et ses copeaux de truffe noir</p>
+						<h3 class="menu__card-title">Velouté de légumes d'antan</h3>
+						<p class="menu__card-text">Carotte, panais, topinambour</p>
 					</div>
 					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
@@ -77,10 +76,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Oeuf au plat</h3>
-						<p class="menu__card-text">
-							Assaisonné à la truffe sur lit de caviar
-						</p>
+						<h3 class="menu__card-title">Soupe à l'oignon</h3>
+						<p class="menu__card-text">Revisitée</p>
 					</div>
 					<div class="menu__card-price">20€</div>
 					<div class="menu__card-hidden-panel">
@@ -95,10 +92,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Filet de boeuf aux herbes</h3>
-						<p class="menu__card-text">
-							Accompagné de sa ribambelle de légume
-						</p>
+						<h3 class="menu__card-title">Coquilles Saint-Jacques</h3>
+						<p class="menu__card-text">Accompagnées d'une purée de panais</p>
 					</div>
 					<div class="menu__card-price">40€</div>
 					<div class="menu__card-hidden-panel">
@@ -108,10 +103,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Parmentier de queue de boeuf</h3>
-						<p class="menu__card-text">
-							À la truffe noire sur sa purée de panais
-						</p>
+						<h3 class="menu__card-title">Magret de canard</h3>
+						<p class="menu__card-text">Et parmentier de pommes de terre</p>
 					</div>
 					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
@@ -121,8 +114,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Filet de turbot</h3>
-						<p class="menu__card-text">Aux agrumes</p>
+						<h3 class="menu__card-title">Pigeonneau d’Ille-et-Vilaine</h3>
+						<p class="menu__card-text">Sur son lit de gnocchis aux légumes</p>
 					</div>
 					<div class="menu__card-price">44€</div>
 					<div class="menu__card-hidden-panel">
@@ -137,8 +130,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Paris-Brest</h3>
-						<p class="menu__card-text">Revisité</p>
+						<h3 class="menu__card-title">Pétales de violettes glacés</h3>
+						<p class="menu__card-text">Et purée de noisettes</p>
 					</div>
 					<div class="menu__card-price">18€</div>
 					<div class="menu__card-hidden-panel">
@@ -148,8 +141,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Macaron au chocolat d'exception</h3>
-						<p class="menu__card-text">Et glace à la vanille de Madagascar</p>
+						<h3 class="menu__card-title">Fondant au chocolat</h3>
+						<p class="menu__card-text">Revisité</p>
 					</div>
 					<div class="menu__card-price">22€</div>
 					<div class="menu__card-hidden-panel">
@@ -159,10 +152,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Mousse au chocolat</h3>
-						<p class="menu__card-text">
-							Au piment d'Espelette et à la truffe noir
-						</p>
+						<h3 class="menu__card-title">Millefeuille croustillant</h3>
+						<p class="menu__card-text">Myrtilles et pâte d’amande</p>
 					</div>
 					<div class="menu__card-price">23€</div>
 					<div class="menu__card-hidden-panel">
