--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 					<div class="restaurants__card-label">Nouveau</div>
 				</a>
 
-				<a class="restaurants__card">
+				<a class="restaurants__card" href="la-note-enchantee.html">
 					<div class="restaurants__card-img">
 						<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant thumbnail" />
 					</div>
@@ -105,7 +105,7 @@
 					<div class="restaurants__card-label">Nouveau</div>
 				</a>
 
-				<a class="restaurants__card">
+				<a class="restaurants__card" href="a-la-francaise.html">
 					<div class="restaurants__card-img">
 						<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant thumbnail" />
 					</div>
@@ -119,7 +119,7 @@
 					</div>
 				</a>
 
-				<a class="restaurants__card">
+				<a class="restaurants__card" href="le-delice-des-sens.html">
 					<div class="restaurants__card-img">
 						<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
 							alt="restaurant thumbnail" />
