--- a/public/la-note-enchantee.html
+++ b/public/la-note-enchantee.html
@@ -24,13 +24,12 @@
 
 	<main>
 		<!-- image section -->
-		<img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-			alt="restaurant image preview" />
+		<img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant image preview" />
 
 		<!-- menu section -->
 		<section class="menu">
 			<h1 class="menu__title">
-				La palette du goût
+				La note enchantée
 				<svg id="heart" height="0" width="0">
 					<defs>
 						<clipPath id="svgPath">
@@ -55,8 +54,10 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Fricassée d'escargot</h3>
-						<p class="menu__card-text">Au piment d'espelette</p>
+						<h3 class="menu__card-title">Ravioles de foie gras</h3>
+						<p class="menu__card-text">
+							Accompagnés de leur crème à la truffe
+						</p>
 					</div>
 					<div class="menu__card-price">25€</div>
 					<div class="menu__card-hidden-panel">
@@ -66,8 +67,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Foie gras de canard mi-cuit</h3>
-						<p class="menu__card-text">Et ses copeaux de truffe noir</p>
+						<h3 class="menu__card-title">Caviar osciètre</h3>
+						<p class="menu__card-text">Sur blini à la farine de blé noir</p>
 					</div>
 					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
@@ -77,12 +78,21 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Oeuf au plat</h3>
-						<p class="menu__card-text">
-							Assaisonné à la truffe sur lit de caviar
-						</p>
+						<h3 class="menu__card-title">Homard et espuma de potiron</h3>
+						<p class="menu__card-text">Mariné aux zestes d'orange</p>
 					</div>
 					<div class="menu__card-price">20€</div>
+					<div class="menu__card-hidden-panel">
+						<i class="fa-solid fa-circle-check"></i>
+					</div>
+				</div>
+
+				<div class="menu__card">
+					<div class="menu__card-content">
+						<h3 class="menu__card-title">Foie gras de canard cuit entier</h3>
+						<p class="menu__card-text">Confiture de figue et pain toasté</p>
+					</div>
+					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
 						<i class="fa-solid fa-circle-check"></i>
 					</div>
@@ -95,10 +105,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Filet de boeuf aux herbes</h3>
-						<p class="menu__card-text">
-							Accompagné de sa ribambelle de légume
-						</p>
+						<h3 class="menu__card-title">Noix de coquilles Saint-Jacques</h3>
+						<p class="menu__card-text">Sur lit de purée de céleri-rave</p>
 					</div>
 					<div class="menu__card-price">40€</div>
 					<div class="menu__card-hidden-panel">
@@ -108,10 +116,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Parmentier de queue de boeuf</h3>
-						<p class="menu__card-text">
-							À la truffe noire sur sa purée de panais
-						</p>
+						<h3 class="menu__card-title">Langoustine poêlée</h3>
+						<p class="menu__card-text">Purée de patate douce</p>
 					</div>
 					<div class="menu__card-price">35€</div>
 					<div class="menu__card-hidden-panel">
@@ -121,8 +127,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Filet de turbot</h3>
-						<p class="menu__card-text">Aux agrumes</p>
+						<h3 class="menu__card-title">Mijoté de queue de boeuf</h3>
+						<p class="menu__card-text">Et riz sauvage aux zestes de citron</p>
 					</div>
 					<div class="menu__card-price">44€</div>
 					<div class="menu__card-hidden-panel">
@@ -137,8 +143,10 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Paris-Brest</h3>
-						<p class="menu__card-text">Revisité</p>
+						<h3 class="menu__card-title">Macaron noisette et chocolat</h3>
+						<p class="menu__card-text">
+							Glace au caramel brun et sel de Guérande
+						</p>
 					</div>
 					<div class="menu__card-price">18€</div>
 					<div class="menu__card-hidden-panel">
@@ -148,8 +156,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Macaron au chocolat d'exception</h3>
-						<p class="menu__card-text">Et glace à la vanille de Madagascar</p>
+						<h3 class="menu__card-title">Baba au rhum revisité</h3>
+						<p class="menu__card-text">Avec son coulis de citron</p>
 					</div>
 					<div class="menu__card-price">22€</div>
 					<div class="menu__card-hidden-panel">
@@ -159,10 +167,8 @@
 
 				<div class="menu__card">
 					<div class="menu__card-content">
-						<h3 class="menu__card-title">Mousse au chocolat</h3>
-						<p class="menu__card-text">
-							Au piment d'Espelette et à la truffe noir
-						</p>
+						<h3 class="menu__card-title">Tarte au citron meringuée</h3>
+						<p class="menu__card-text">Déstructurée</p>
 					</div>
 					<div class="menu__card-price">23€</div>
 					<div class="menu__card-hidden-panel">
