folders structure changed

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 		</section>
 	</main>
 
+	<!-- footer -->
 	<footer class="footer">
 		<div class="footer__content">
 			<a href="#" class="footer__logo">ohmyfood</a>
