fix restaurant cards links

--- a/index.html
+++ b/index.html
@@ -75,27 +75,38 @@
 			</h2>
 
 			<div class="restaurants__cards">
-				<a class="restaurants__card" href="la-palette-du-gout.html">
-					<div class="restaurants__card-img">
-						<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant thumbnail" />
-					</div>
+				<div class="restaurants__card">
+					<a href="la-palette-du-gout.html">
+						<div class="restaurants__card-img">
+							<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant thumbnail" />
+						</div>
+					</a>
 					<div class="restaurants__card-body">
-						<h3 class="restaurants__card-title">La palette du goût</h3>
+						<a href="la-palette-du-gout.html">
+							<h3 class="restaurants__card-title">La palette du goût</h3>
+						</a>
 						<p class="restaurants__card-location">Ménilmontant</p>
 						<div class="restaurants__card-heart">
+							<!-- text-stroke -->
+							<!-- background-clip -->
+
 							<i class="far fa-heart"></i>
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
 					<div class="restaurants__card-label">Nouveau</div>
-				</a>
+				</div>
 
-				<a class="restaurants__card" href="la-note-enchantee.html">
-					<div class="restaurants__card-img">
-						<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant thumbnail" />
-					</div>
+				<div class="restaurants__card">
+					<a href="la-note-enchantee.html">
+						<div class="restaurants__card-img">
+							<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant thumbnail" />
+						</div>
+					</a>
 					<div class="restaurants__card-body">
-						<h3 class="restaurants__card-title">La note enchantée</h3>
+						<a href="la-note-enchantee.html">
+							<h3 class="restaurants__card-title">La note enchantée</h3>
+						</a>
 						<p class="restaurants__card-location">Charonne</p>
 						<div class="restaurants__card-heart">
 							<i class="far fa-heart"></i>
@@ -103,36 +114,44 @@
 						</div>
 					</div>
 					<div class="restaurants__card-label">Nouveau</div>
-				</a>
+				</div>
 
-				<a class="restaurants__card" href="a-la-francaise.html">
-					<div class="restaurants__card-img">
-						<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant thumbnail" />
-					</div>
+				<div class="restaurants__card">
+					<a href="a-la-francaise.html">
+						<div class="restaurants__card-img">
+							<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant thumbnail" />
+						</div>
+					</a>
 					<div class="restaurants__card-body">
-						<h3 class="restaurants__card-title">A la Française</h3>
+						<a href="a-la-francaise.html">
+							<h3 class="restaurants__card-title">A la Française</h3>
+						</a>
 						<p class="restaurants__card-location">Cité Rouge</p>
 						<div class="restaurants__card-heart">
 							<i class="far fa-heart"></i>
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
-				</a>
+				</div>
 
-				<a class="restaurants__card" href="le-delice-des-sens.html">
-					<div class="restaurants__card-img">
-						<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-							alt="restaurant thumbnail" />
-					</div>
+				<div class="restaurants__card">
+					<a href="le-delice-des-sens.html">
+						<div class="restaurants__card-img">
+							<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+								alt="restaurant thumbnail" />
+						</div>
+					</a>
 					<div class="restaurants__card-body">
-						<h3 class="restaurants__card-title">Le délice des sens</h3>
+						<a href="le-delice-des-sens.html">
+							<h3 class="restaurants__card-title">Le délice des sens</h3>
+						</a>
 						<p class="restaurants__card-location">Folie-Méricourt</p>
 						<div class="restaurants__card-heart">
 							<i class="far fa-heart"></i>
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
-				</a>
+				</div>
 			</div>
 		</section>
 	</main>
