--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
 							<h3 class="restaurants__card-title">La palette du goût</h3>
 						</a>
 						<p class="restaurants__card-location">Ménilmontant</p>
-						<div class="restaurants__card-heart">
-							<!-- text-stroke -->
-							<!-- background-clip -->
-
-							<i class="far fa-heart"></i>
+						<div class="restaurants__card-heart heart-btn">
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
@@ -108,8 +104,7 @@
 							<h3 class="restaurants__card-title">La note enchantée</h3>
 						</a>
 						<p class="restaurants__card-location">Charonne</p>
-						<div class="restaurants__card-heart">
-							<i class="far fa-heart"></i>
+						<div class="restaurants__card-heart heart-btn">
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
@@ -127,8 +122,7 @@
 							<h3 class="restaurants__card-title">A la Française</h3>
 						</a>
 						<p class="restaurants__card-location">Cité Rouge</p>
-						<div class="restaurants__card-heart">
-							<i class="far fa-heart"></i>
+						<div class="restaurants__card-heart heart-btn">
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
@@ -146,8 +140,7 @@
 							<h3 class="restaurants__card-title">Le délice des sens</h3>
 						</a>
 						<p class="restaurants__card-location">Folie-Méricourt</p>
-						<div class="restaurants__card-heart">
-							<i class="far fa-heart"></i>
+						<div class="restaurants__card-heart heart-btn">
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
