--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
 <body>
 	<!-- header -->
 	<header class="header">
-		<a href="/">
+		<a href="#">
 			<img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" class="header__logo" />
 		</a>
 	</header>
+
+	<!-- loader -->
+	<div class="loader">
+		<div class="loader__circle"></div>
+		<div class="loader__circle"></div>
+		<div class="loader__circle"></div>
+	</div>
 
 	<main>
 		<!-- location section -->
