actual loading SPINNER + better heart animation

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 	</header>
 
 	<!-- loader -->
-	<div class="loader">
-		<div class="loader__circle"></div>
-		<div class="loader__circle"></div>
-		<div class="loader__circle"></div>
+	<div class="loading-screen">
+		<div class="loader">
+			<div class="loader__circle-bg"></div>
+			<div class="loader__circle"></div>
+			<div class="loader__circle"></div>
+			<div class="loader__circle"></div>
+		</div>
 	</div>
 
 	<main>
@@ -95,6 +98,7 @@
 						<p class="restaurants__card-location">Ménilmontant</p>
 						<div class="restaurants__card-heart heart-btn">
 							<i class="fas fa-heart"></i>
+							<!-- <i class="fa-solid fa-thumbs-up"></i> -->
 						</div>
 					</div>
 					<div class="restaurants__card-label">Nouveau</div>
@@ -173,7 +177,7 @@
 					<a href="#" class="footer__links">Mentions légales</a>
 				</li>
 				<li>
-					<a href="#" class="footer__links">Contact</a>
+					<a href="mailto:contact@ohmyfood.com" class="footer__links">Contact</a>
 				</li>
 			</ul>
 		</div>
