--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -181,7 +181,7 @@
 					<a href="#" class="footer__links">Mentions légales</a>
 				</li>
 				<li>
-					<a href="#" class="footer__links">Contact</a>
+					<a href="mailto:contact@ohmyfood.com" class="footer__links">Contact</a>
 				</li>
 			</ul>
 		</div>
