--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				Découvrez des restaurants d'exception,<br />sélectionnés par nos
 				soins.
 			</p>
-			<a href="#restaurants" class="btn">Explorer nos restaurants</a>
+			<a href="#restaurants" class="hero__btn btn">Explorer nos restaurants</a>
 		</section>
 
 		<!-- usage section -->
@@ -85,7 +85,7 @@
 			</h2>
 
 			<div class="restaurants__cards">
-				<div class="restaurants__card">
+				<div class="restaurants__card restaurants__card--new">
 					<a href="la-palette-du-gout.html">
 						<div class="restaurants__card-img">
 							<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant thumbnail" />
@@ -101,10 +101,9 @@
 							<!-- <i class="fa-solid fa-thumbs-up"></i> -->
 						</div>
 					</div>
-					<div class="restaurants__card-label">Nouveau</div>
 				</div>
 
-				<div class="restaurants__card">
+				<div class="restaurants__card restaurants__card--new">
 					<a href="la-note-enchantee.html">
 						<div class="restaurants__card-img">
 							<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant thumbnail" />
@@ -119,7 +118,6 @@
 							<i class="fas fa-heart"></i>
 						</div>
 					</div>
-					<div class="restaurants__card-label">Nouveau</div>
 				</div>
 
 				<div class="restaurants__card">
