--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -32,9 +32,9 @@
 				La note enchantée
 
 				<!-- heart button -->
-				<div class="menu__heart heart-btn">
+				<span class="menu__heart heart-btn">
 					<i class="fas fa-heart"></i>
-				</div>
+				</span>
 			</h1>
 
 			<!-- ENTREES -->
@@ -171,6 +171,7 @@
 		</section>
 	</main>
 
+	<!-- footer -->
 	<footer class="footer">
 		<div class="footer__content">
 			<a href="#" class="footer__logo">ohmyfood</a>
