--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -33,9 +33,9 @@
 				Le délice des sens
 
 				<!-- heart button -->
-				<div class="menu__heart heart-btn">
+				<span class="menu__heart heart-btn">
 					<i class="fas fa-heart"></i>
-				</div>
+				</span>
 			</h1>
 
 			<!-- ENTREES -->
@@ -159,6 +159,7 @@
 		</section>
 	</main>
 
+	<!-- footer -->
 	<footer class="footer">
 		<div class="footer__content">
 			<a href="#" class="footer__logo">ohmyfood</a>
