--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -32,9 +32,9 @@
 				À la française
 
 				<!-- heart button -->
-				<div class="menu__heart heart-btn">
+				<span class="menu__heart heart-btn">
 					<i class="fas fa-heart"></i>
-				</div>
+				</span>
 			</h1>
 
 			<!-- ENTREES -->
@@ -156,6 +156,7 @@
 		</section>
 	</main>
 
+	<!-- footer -->
 	<footer class="footer">
 		<div class="footer__content">
 			<a href="#" class="footer__logo">ohmyfood</a>
