--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 		<!-- location section -->
 		<section class="location">
 			<div class="location__content">
-				<p class="location__text">
+				<h3 class="location__text">
 					<i class="fas fa-map-marker-alt"></i>
 					Paris, Belleville
-				</p>
+				</h3>
 			</div>
 		</section>
 
