--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -33,9 +33,9 @@
 				La palette du goût
 
 				<!-- heart button -->
-				<div class="menu__heart heart-btn">
+				<span class="menu__heart heart-btn">
 					<i class="fas fa-heart"></i>
-				</div>
+				</span>
 			</h1>
 
 			<!-- ENTREES -->
@@ -165,6 +165,7 @@
 		</section>
 	</main>
 
+	<!-- footer -->
 	<footer class="footer">
 		<div class="footer__content">
 			<a href="#" class="footer__logo">ohmyfood</a>
