--- a/index.html
+++ b/index.html
@@ -1,185 +1,207 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <title>Ohmyfood!</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-	<title>Ohmyfood!</title>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- css -->
+    <link href="css/main.css" rel="stylesheet" />
 
-	<!-- css -->
-	<link href="css/main.css" rel="stylesheet" />
+    <!-- scripts -->
+    <script
+      src="https://kit.fontawesome.com/8337497683.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-	<!-- scripts -->
-	<script src="https://kit.fontawesome.com/8337497683.js" crossorigin="anonymous"></script>
-</head>
+  <body>
+    <!-- header -->
+    <header class="header">
+      <a href="#">
+        <img
+          src="images/logo/ohmyfood@2x.svg"
+          alt="ohmyfood logo"
+          class="header__logo"
+        />
+      </a>
+    </header>
 
-<body>
-	<!-- header -->
-	<header class="header">
-		<a href="#">
-			<img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" class="header__logo" />
-		</a>
-	</header>
+    <!-- loader -->
+    <div class="loading-screen">
+      <div class="loader">
+        <div class="loader__circle-bg"></div>
+        <div class="loader__circle"></div>
+        <div class="loader__circle"></div>
+        <div class="loader__circle"></div>
+      </div>
+    </div>
 
-	<!-- loader -->
-	<div class="loading-screen">
-		<div class="loader">
-			<div class="loader__circle-bg"></div>
-			<div class="loader__circle"></div>
-			<div class="loader__circle"></div>
-			<div class="loader__circle"></div>
-		</div>
-	</div>
+    <main>
+      <!-- location section -->
+      <section class="location">
+        <div class="location__content">
+          <h3 class="location__text">
+            <i class="fas fa-map-marker-alt"></i>
+            Paris, Belleville
+          </h3>
+        </div>
+      </section>
 
-	<main>
-		<!-- location section -->
-		<section class="location">
-			<div class="location__content">
-				<h3 class="location__text">
-					<i class="fas fa-map-marker-alt"></i>
-					Paris, Belleville
-				</h3>
-			</div>
-		</section>
+      <!-- hero section -->
+      <section class="hero">
+        <h1 class="hero__title">Réservez le menu qui<br />vous convient</h1>
+        <p class="hero__subtitle">
+          Découvrez des restaurants d'exception,<br />sélectionnés par nos
+          soins.
+        </p>
+        <a href="#restaurants" class="hero__btn btn"
+          >Explorer nos restaurants</a
+        >
+      </section>
 
-		<!-- hero section -->
-		<section class="hero">
-			<h1 class="hero__title">Réservez le menu qui<br />vous convient</h1>
-			<p class="hero__subtitle">
-				Découvrez des restaurants d'exception,<br />sélectionnés par nos
-				soins.
-			</p>
-			<a href="#restaurants" class="hero__btn btn">Explorer nos restaurants</a>
-		</section>
+      <!-- usage section -->
+      <section class="usage">
+        <h2 class="usage__title">Fonctionnement</h2>
 
-		<!-- usage section -->
-		<section class="usage">
-			<h2 class="usage__title">Fonctionnement</h2>
+        <div class="usage__cards">
+          <div class="usage__card">
+            <div class="usage__number">1</div>
+            <i class="fas fa-mobile-alt"></i>
+            <p class="usage__card-text">Choisissez un restaurant</p>
+          </div>
 
-			<div class="usage__cards">
-				<div class="usage__card">
-					<div class="usage__number">1</div>
-					<i class="fas fa-mobile-alt"></i>
-					<p class="usage__card-text">Choisissez un restaurant</p>
-				</div>
+          <div class="usage__card">
+            <div class="usage__number">2</div>
+            <i class="fas fa-list-ul"></i>
+            <p class="usage__card-text">Composez votre menu</p>
+          </div>
 
-				<div class="usage__card">
-					<div class="usage__number">2</div>
-					<i class="fas fa-list-ul"></i>
-					<p class="usage__card-text">Composez votre menu</p>
-				</div>
+          <div class="usage__card usage__card--highlight">
+            <div class="usage__number">3</div>
+            <i class="fas fa-store"></i>
+            <p class="usage__card-text">Dégustez au restaurant</p>
+          </div>
+        </div>
+      </section>
 
-				<div class="usage__card usage__card--highlight">
-					<div class="usage__number">3</div>
-					<i class="fas fa-store"></i>
-					<p class="usage__card-text">Dégustez au restaurant</p>
-				</div>
-			</div>
-		</section>
+      <!-- restaurants section -->
+      <section class="restaurants">
+        <h2 class="restaurants__title">
+          <span class="restaurants__anchor" id="restaurants"></span>
+          Restaurants
+        </h2>
 
-		<!-- restaurants section -->
-		<section class="restaurants">
-			<h2 class="restaurants__title">
-				<span class="restaurants__anchor" id="restaurants"></span>
-				Restaurants
-			</h2>
+        <div class="restaurants__cards">
+          <div class="restaurants__card restaurants__card--new">
+            <a href="pages/la-palette-du-gout.html">
+              <div class="restaurants__card-img">
+                <img
+                  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="restaurant thumbnail"
+                />
+              </div>
+            </a>
+            <div class="restaurants__card-body">
+              <a href="pages/la-palette-du-gout.html">
+                <h3 class="restaurants__card-title">La palette du goût</h3>
+              </a>
+              <p class="restaurants__card-location">Ménilmontant</p>
+              <div class="restaurants__card-heart heart-btn">
+                <i class="fas fa-heart"></i>
+                <!-- <i class="fa-solid fa-thumbs-up"></i> -->
+              </div>
+            </div>
+          </div>
 
-			<div class="restaurants__cards">
-				<div class="restaurants__card restaurants__card--new">
-					<a href="la-palette-du-gout.html">
-						<div class="restaurants__card-img">
-							<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant thumbnail" />
-						</div>
-					</a>
-					<div class="restaurants__card-body">
-						<a href="la-palette-du-gout.html">
-							<h3 class="restaurants__card-title">La palette du goût</h3>
-						</a>
-						<p class="restaurants__card-location">Ménilmontant</p>
-						<div class="restaurants__card-heart heart-btn">
-							<i class="fas fa-heart"></i>
-							<!-- <i class="fa-solid fa-thumbs-up"></i> -->
-						</div>
-					</div>
-				</div>
+          <div class="restaurants__card restaurants__card--new">
+            <a href="pages/la-note-enchantee.html">
+              <div class="restaurants__card-img">
+                <img
+                  src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="restaurant thumbnail"
+                />
+              </div>
+            </a>
+            <div class="restaurants__card-body">
+              <a href="pages/la-note-enchantee.html">
+                <h3 class="restaurants__card-title">La note enchantée</h3>
+              </a>
+              <p class="restaurants__card-location">Charonne</p>
+              <div class="restaurants__card-heart heart-btn">
+                <i class="fas fa-heart"></i>
+              </div>
+            </div>
+          </div>
 
-				<div class="restaurants__card restaurants__card--new">
-					<a href="la-note-enchantee.html">
-						<div class="restaurants__card-img">
-							<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant thumbnail" />
-						</div>
-					</a>
-					<div class="restaurants__card-body">
-						<a href="la-note-enchantee.html">
-							<h3 class="restaurants__card-title">La note enchantée</h3>
-						</a>
-						<p class="restaurants__card-location">Charonne</p>
-						<div class="restaurants__card-heart heart-btn">
-							<i class="fas fa-heart"></i>
-						</div>
-					</div>
-				</div>
+          <div class="restaurants__card">
+            <a href="pages/a-la-francaise.html">
+              <div class="restaurants__card-img">
+                <img
+                  src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="restaurant thumbnail"
+                />
+              </div>
+            </a>
+            <div class="restaurants__card-body">
+              <a href="pages/a-la-francaise.html">
+                <h3 class="restaurants__card-title">A la Française</h3>
+              </a>
+              <p class="restaurants__card-location">Cité Rouge</p>
+              <div class="restaurants__card-heart heart-btn">
+                <i class="fas fa-heart"></i>
+              </div>
+            </div>
+          </div>
 
-				<div class="restaurants__card">
-					<a href="a-la-francaise.html">
-						<div class="restaurants__card-img">
-							<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant thumbnail" />
-						</div>
-					</a>
-					<div class="restaurants__card-body">
-						<a href="a-la-francaise.html">
-							<h3 class="restaurants__card-title">A la Française</h3>
-						</a>
-						<p class="restaurants__card-location">Cité Rouge</p>
-						<div class="restaurants__card-heart heart-btn">
-							<i class="fas fa-heart"></i>
-						</div>
-					</div>
-				</div>
+          <div class="restaurants__card">
+            <a href="pages/le-delice-des-sens.html">
+              <div class="restaurants__card-img">
+                <img
+                  src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="restaurant thumbnail"
+                />
+              </div>
+            </a>
+            <div class="restaurants__card-body">
+              <a href="pages/le-delice-des-sens.html">
+                <h3 class="restaurants__card-title">Le délice des sens</h3>
+              </a>
+              <p class="restaurants__card-location">Folie-Méricourt</p>
+              <div class="restaurants__card-heart heart-btn">
+                <i class="fas fa-heart"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-				<div class="restaurants__card">
-					<a href="le-delice-des-sens.html">
-						<div class="restaurants__card-img">
-							<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-								alt="restaurant thumbnail" />
-						</div>
-					</a>
-					<div class="restaurants__card-body">
-						<a href="le-delice-des-sens.html">
-							<h3 class="restaurants__card-title">Le délice des sens</h3>
-						</a>
-						<p class="restaurants__card-location">Folie-Méricourt</p>
-						<div class="restaurants__card-heart heart-btn">
-							<i class="fas fa-heart"></i>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</main>
-
-	<!-- footer -->
-	<footer class="footer">
-		<div class="footer__content">
-			<a href="#" class="footer__logo">ohmyfood</a>
-			<ul>
-				<li>
-					<a href="#" class="footer__links footer__links--bold"><i class="fas fa-utensils"></i>Proposer un
-						restaurant</a>
-				</li>
-				<li>
-					<a href="#" class="footer__links footer__links--bold"><i class="fas fa-hands-helping"></i>Devenir
-						partenaire</a>
-				</li>
-				<li>
-					<a href="#" class="footer__links">Mentions légales</a>
-				</li>
-				<li>
-					<a href="mailto:contact@ohmyfood.com" class="footer__links">Contact</a>
-				</li>
-			</ul>
-		</div>
-	</footer>
-</body>
-
+    <!-- footer -->
+    <footer class="footer">
+      <div class="footer__content">
+        <a href="#" class="footer__logo">ohmyfood</a>
+        <ul>
+          <li>
+            <a href="#" class="footer__links footer__links--bold"
+              ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a href="#" class="footer__links footer__links--bold"
+              ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+            >
+          </li>
+          <li>
+            <a href="#" class="footer__links">Mentions légales</a>
+          </li>
+          <li>
+            <a href="mailto:contact@ohmyfood.com" class="footer__links"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
